--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,75 @@
 alembic==1.14.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 colorlog==6.9.0
+contourpy==1.3.1
+cycler==0.12.1
+decorator==5.2.1
+filelock==3.17.0
+fonttools==4.56.0
+fsspec==2025.2.0
 greenlet==3.1.1
+idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
 jax==0.5.0
 jax-cuda12-pjrt==0.5.0
 jax-cuda12-plugin==0.5.0
 jaxlib==0.5.0
+Jinja2==3.1.5
+kiwisolver==1.4.8
 lxml==5.3.1
 Mako==1.3.9
 MarkupSafe==3.0.2
+matplotlib==3.10.0
 ml_dtypes==0.5.1
-numpy==2.2.3
-nvidia-cublas-cu12==12.8.3.14
-nvidia-cuda-cupti-cu12==12.8.57
+moviepy==2.1.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.1.1
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvcc-cu12==12.8.61
-nvidia-cuda-runtime-cu12==12.8.57
-nvidia-cudnn-cu12==9.7.1.26
-nvidia-cufft-cu12==11.3.3.41
-nvidia-cusolver-cu12==11.7.2.55
-nvidia-cusparse-cu12==12.5.7.53
-nvidia-nccl-cu12==2.25.1
-nvidia-nvjitlink-cu12==12.8.61
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optuna==4.2.1
 packaging==24.2
+pandas==2.2.3
+pillow==10.4.0
+proglog==0.1.10
+psutil==7.0.0
+py-cpuinfo==9.0.0
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
 PyYAML==6.0.2
+requests==2.32.3
 scipy==1.15.2
+seaborn==0.13.2
 setuptools==75.8.0
+six==1.17.0
 SQLAlchemy==2.0.38
+sympy==1.13.1
+torch==2.6.0
+torchvision==0.21.0
 tqdm==4.67.1
+triton==3.2.0
 typing_extensions==4.12.2
+tzdata==2025.1
+ultralytics==8.3.80
+ultralytics-thop==2.0.14
+urllib3==2.3.0
 wheel==0.45.1
