--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@ src/output_videos_adaptive
 src/output_videos_adaptive_opt
 src/visualization
 
+# YOLO stuff
+week2/dataset/
+week2/dataset_strategyA/
+week2/dataset_strategyB/
+week2/dataset_strategyC/
+week2/src/runs/
+week2/src/yolo_train_fold_*/
+
 # To avoid including videos
 *.avi
 *.mp4
