--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "week2/src/tracking/TrackEval"]
 	path = week2/src/tracking/TrackEval
 	url = https://github.com/JonathonLuiten/TrackEval.git
+[submodule "week3/src/optical_flow/pyflow"]
+	path = week3/src/optical_flow/pyflow
+	url = https://github.com/pathak22/pyflow.git
