finishing tracking scripts and adding config settings

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ week2/src/tracking/job
 # Data folders
 data/
 detections/
+results/
 src/output_videos
 src/output_videos_adaptive
 src/output_videos_adaptive_opt
