--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "week3/src/tracking/TrackEval"]
 	path = week3/src/tracking/TrackEval
 	url = https://github.com/JonathonLuiten/TrackEval.git
+[submodule "week3/src/multi_target_tracking/TrackEval"]
+	path = week3/src/multi_target_tracking/TrackEval
+	url = https://github.com/JonathonLuiten/TrackEval.git
