--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ moviepy==2.1.2
 mpmath==1.3.0
 namex==0.0.8
 networkx==3.4.2
-numpy==2.0.2
+numpy~=1.26.4
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvcc-cu12==12.8.61
@@ -93,8 +93,8 @@ termcolor==2.5.0
 tf_keras==2.18.0
 threadpoolctl==3.5.0
 tifffile==2025.2.18
-torch==2.6.0
-torchvision==0.21.0
+torch~=2.2.2
+torchvision~=0.17.2
 tqdm==4.67.1
 triton==3.2.0
 typing_extensions==4.12.2
@@ -105,3 +105,4 @@ urllib3==2.3.0
 Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.2
+boxmot~=12.0.1
