--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "week5/mcv-c6-team1-project2"]
 	path = week5/mcv-c6-team1-project2
 	url = https://github.com/yeray142/mcv-c6-team1-project2.git
+[submodule "week6/mcv-c6-team1-project3"]
+	path = week6/mcv-c6-team1-project3
+	url = https://github.com/yeray142/mcv-c6-team1-project3.git
